--- a/style.css
+++ b/style.css
@@ -2,4 +2,36 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
+  text-align: center;
 }
+h1 {
+  text-align: center;
+
+}
+img { 
+  display: block;
+  width: auto;
+  margin-left:auto ;
+  margin-right: auto;
+  
+}
+nav a {
+  background-color: grey;
+  padding-left: 10px;
+  padding-right: 10px;
+
+}
+#featured-property p {
+  width: 800px;
+  text-align: center;
+  margin-left: auto;
+  margin-right:auto;
+}
+#details div {
+float: left;
+background-color: red;
+width: 25%;
+}
+
+
+
